# DP

fairino-robot-API/: .env.example  .gitignore  README.md  pyproject.toml
fairino-robot-API/fairino-python-sdk-2.2.3_robot3.9.3/: README.md
fairino-robot-API/fairino-python-sdk-2.2.3_robot3.9.3/fairino/: Robot.py  test.py
fairino-robot-API/src/robot_api/: __init__.py  config.py  fairino_client.py  main.py  models.py  sdk_loader.py  service.py
notes/: move-cartesian.md
thesis/: zdroje.bib
thesis/DP0/: main.tex  pristupy.tex  title.tex
